# tcollections

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pypirc_example  pyproject.toml
examples/: 01_introduction.ipynb  02_data_analysis.ipynb
src/tcollections/: __init__.py  chain.py  group_funcs.py  group_funcs_lowlevel.py  group_types.py  grouper.py  grouping.py  grouping_base_funcs.py  groups.py  tlist.py  typed_collections.py
src/tcollections/depricated/: grouping.py  groups.py
tests/: test_groupings.py  test_tlist_and_tset.py  test_tlist_groupings.py
